<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Acercade">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/toolbar"
            android:id="@+id/tolbarAcerca"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="150dp"
            android:text="@string/desarollador"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:text="@string/version" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            style="@style/AppTheme"
            android:text="@string/correo"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>